--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/uuid": "^9.0.7",
     "csv-parse": "^5.5.2",
     "undici-types": "^5.26.5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "xmlbuilder2": "^3.1.1"
   },
   "scripts": {
     "dev": "npx nodemon",
